--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Dataset/train.csv.zip
 Dataset/test.csv/test.csv
 Dataset/train.csv/train.csv
 ML_Project_KMeans.ipynb
+2_LabEnhancements_LinearRegression.ipynb
