--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ Dataset/test.csv/test.csv
 Dataset/train.csv/train.csv
 ML_Project_KMeans.ipynb
 2_LabEnhancements_LinearRegression.ipynb
+Number_of_Prisoners_by_Gender_by_State_2016-2019.csv
+ML_Project_KMeans.ipynb
+Dataset-20240207T102106Z-001.zip
+2_LabEnhancements_LinearRegression.ipynb
